fix: platform specific configuration

--- a/platforms/guardoni/.env
+++ b/platforms/guardoni/.env
@@ -1,3 +1,4 @@
 NODE_ENV=production
-BACKEND=https://youtube.tracking.exposed/api
+YT_BACKEND=https://youtube.tracking.exposed/api
+TK_BACKEND=https://tiktok.tracking.exposed/api
 DEBUG="guardoni:*"
