--- a/platforms/guardoni/.env.development
+++ b/platforms/guardoni/.env.development
@@ -1,3 +1,4 @@
 NODE_ENV=development
-BACKEND=http://localhost:9000/api
+YT_BACKEND=http://localhost:9000/api
+TK_BACKEND=http://localhost:14000/api
 DEBUG=@trex:*,guardoni:*
