--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "build": "webpack",
     "watch": "NODE_ENV=development webpack watch",
-    "dev": "DEBUG=\"guardoni*\" NODE_ENV=development electron ./reload.js",
+    "dev": "DOTENV_CONFIG_PATH=../../.env.development electron ./reload.js",
     "start": "electron .",
     "pack": "electron-builder build --dir",
     "dist:linux": "electron-builder build -l",
