--- a/platforms/guardoni/guardoni.config.json
+++ b/platforms/guardoni/guardoni.config.json
@@ -1,5 +1,16 @@
 {
-  "profileName": "default",
-  "backend": "http://localhost:9000/api",
-  "extensionDir": "../yttrex/extension/build"
+  "profileName": "profile-test-99",
+  "verbose": true,
+  "headless": true,
+  "loadFor": 3000,
+  "yt": {
+    "name": "youtube",
+    "backend": "http://localhost:9000/api",
+    "extensionDir": "../yttrex/extension/build"
+  },
+  "tk": {
+    "name": "tiktok",
+    "backend": "http://localhost:14000/api",
+    "extensionDir": "../tktrex/extension/build"
+  }
 }
