--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf build dist",
     "pkg": "sh scripts/pkg.sh",
-    "lint": "eslint ./src/**",
+    "lint": "eslint ./src",
     "format": "prettier -w ./src",
     "test": "jest",
     "build": "webpack",
