ci: use only port 27017 for mongo db

--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -19,6 +19,11 @@ jobs:
       matrix:
         node-version: [16.x]
         mongodb-version: ['4.2']
+    services:
+      mongo-db:
+        image: mongo:4.2
+        ports:
+          - 27017:27017
 
     steps:
       - uses: actions/checkout@v2
@@ -42,12 +47,6 @@ jobs:
 
       - name: Build shared
         run: yarn shared build
-
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.7.0
-        with:
-          mongodb-port: 27019
-          mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Test platform
         run: |
