--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -44,6 +44,9 @@
   "license": "AGPL-3.0-or-later",
   "homepage": "https://youtube.tracking.exposed/guardoni",
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/avatars-avataaars-sprites": "^4.10.2",
+    "@dicebear/avatars-bottts-sprites": "^4.10.2",
     "@electron/remote": "^2.0.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
