fix(yttrex): extension bootstrap with config validation

--- a/platforms/yttrex/extension/tsconfig.json
+++ b/platforms/yttrex/extension/tsconfig.json
@@ -25,7 +25,14 @@
     }
   ],
   "include": ["./"],
-  "exclude": ["./jest.config.js", "./webpack.config.ts"],
+  "exclude": [
+    "./jest.config.js",
+    "./jest.setup.ts",
+    "./globalSetup.ts",
+    "./globalTeardown.ts",
+    "./__tests__/",
+    "./webpack.config.ts"
+  ],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
