fix(yttrex): use selector from @yttrex/shared in @yttrex/backend

--- a/platforms/yttrex/backend/tsconfig.json
+++ b/platforms/yttrex/backend/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "paths": {
-      "@shared/*": ["../../../packages/shared/src/*"]
+      "@shared/*": ["../../../packages/shared/src/*"],
+      "@yttrex/shared/*": ["../shared/src/*"]
     }
   },
   "include": [
