--- a/platforms/yttrex/shared/tsconfig.json
+++ b/platforms/yttrex/shared/tsconfig.json
@@ -5,19 +5,18 @@
     "allowJs": true,
     "strict": false,
     "outDir": "./build",
-    "rootDir": "./src",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "noEmit": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "isolatedModules": true,
     "tsBuildInfoFile": "build/.tsbuildinfo",
     "paths": {
-      "@shared/*": ["../../../packages/shared/src/*"]
+      "@shared/*": ["../../../../packages/shared/src/*"]
     }
   },
-  "include": ["./src"],
-  "exclude": ["./tests"],
+  "include": ["./"],
+  "exclude": ["./tests", "jest.config.js"],
   "watchOptions": {
     "watchFile": "useFsEvents",
     "watchDirectory": "useFsEvents",
