fix(yttrex): guardoni-cli exec path for linux #503

--- a/platforms/guardoni/guardoni.config.json
+++ b/platforms/guardoni/guardoni.config.json
@@ -12,5 +12,6 @@
     "name": "tiktok",
     "backend": "http://localhost:14000/api",
     "extensionDir": "../tktrex/extension/build"
-  }
+  },
+  "chromePath": "/usr/bin/google-chrome"
 }
