--- a/platforms/tktrex/shared/package.json
+++ b/platforms/tktrex/shared/package.json
@@ -2,6 +2,7 @@
   "name": "@tktrex/shared",
   "packageManager": "yarn@3.1.1",
   "scripts": {
+    "clean": "rm -rf ./build",
     "test": "jest --maxWorkers=8",
     "tdd": "jest --watch --maxWorkers=8",
     "dump-parsed-data": "ts-node bin/dump-parsed-data.ts",
