--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ./src --quiet",
     "build": "DEBUG=\"*\" webpack",
     "build:prod": " DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
+    "build:guardoni": "BUILD_TARGET=guardoni DEBUG=\"*\" webpack",
     "watch": "DEBUG=\"*\" webpack --watch",
     "watch:prod": "NODE_ENV=production webpack --watch",
     "test": "jest"
