--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -67,6 +67,7 @@
     "leveldown": "^5.6.0",
     "linkedom": "^0.14.4",
     "lodash": "^4.17.21",
+    "material-auto-rotating-carousel": "^3.0.2",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
     "puppeteer": "^13.7.0",
@@ -78,6 +79,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
+    "react-swipeable-views": "^0.14.0",
     "unzipper": "^0.10.11",
     "ws": "^8.5.0",
     "yaml": "^1.10.2",
