--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -3,12 +3,13 @@
   "version": "2.4.8",
   "packageManager": "yarn@3.1.1",
   "scripts": {
+    "clean": "rm -rf build dist",
     "lint": "eslint ./src --quiet",
-    "build": "tsc --build && rm -rf dist && DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
-    "build:dev": "DEBUG=\"*\" webpack",
+    "build": "DEBUG=\"*\" webpack",
+    "build:prod": " DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
+    "build:guardoni": "BUILD_TARGET=guardoni DEBUG=\"*\" webpack",
     "watch": "DEBUG=\"*\" webpack --watch",
     "watch:prod": "NODE_ENV=production webpack --watch",
-    "clean": "rm -rf build dist",
     "test": "jest"
   },
   "dependencies": {
