--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,5 @@
   "jest.jestCommandLine": "yarn test",
   "jest.autoRun": "off",
   "eslint.workingDirectories": ["./shared", "./backend", "./YCAI"],
-  "cSpell.words": [
-    "guardoni",
-    "luminati",
-    "SIGI_STATE"
-  ]
+  "cSpell.words": ["guardoni", "luminati", "sigi", "SIGI_STATE"]
 }
