--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -14,10 +14,16 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
+    "@material-ui/x-license": "^4.0.0-alpha.37",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
+    "@mui/styled-engine": "^5.8.0",
+    "@mui/x-data-grid": "^5",
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
