--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -32,9 +32,8 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/chrome": "^0.0.179",
-    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^16.11.26",
@@ -43,7 +42,7 @@
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "copy-webpack-plugin": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
@@ -55,6 +54,7 @@
     "fast-check": "^2.24.0",
     "fast-check-io-ts": "^0.5.0",
     "filemanager-webpack-plugin": "^6.1.7",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.6.0",
     "node-loader": "^2.0.0",
@@ -66,7 +66,7 @@
     "style-loader": "^3.3.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.11.1",
-    "webpack": "^5.72.0",
+    "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   }
