--- a/platforms/yttrex/shared/package.json
+++ b/platforms/yttrex/shared/package.json
@@ -38,6 +38,7 @@
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.5",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.7.2"
   }
