--- a/.github/workflows/docs_pull_request.yml
+++ b/.github/workflows/docs_pull_request.yml
@@ -5,14 +5,13 @@ on:
     branches:
       - daily
       - docs/**
+      - feat/**
       - fix/**
       - refactor/**
     paths:
     - "docs/**"
-    - "platforms/guardoni/docs/**"
-    - "platforms/tktrex/docs/**"
-    - "platforms/yttrex/docs/**"
-    - "platforms/ycai/docs/**"
+    - "packages/**"
+    - "platforms/**"
 
 jobs:
   release:
