--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "TYPEDOC_WATCH=true docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
-    "@mdx-js/react": "^1.6.21",
+    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -24,9 +24,15 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
+    "@mxssfd/typedoc-theme": "^1.0.3",
     "@tsconfig/docusaurus": "^1.0.6",
     "docusaurus-plugin-openapi": "^0.6.3",
+    "docusaurus-plugin-typedoc": "^0.18.0",
     "docusaurus-preset-openapi": "^0.6.3",
+    "typedoc": "^0.23.23",
+    "typedoc-plugin-dompurify": "^1.0.0",
+    "typedoc-plugin-markdown": "^3.14.0",
+    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "^4.8.4"
   },
   "browserslist": {
