--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -89,5 +89,11 @@
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "readmeFile": "./README.md",
+    "displayName": "@trex/shared",
+    "tsconfig": "./tsconfig.json"
   }
 }
