--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -59,10 +59,17 @@
     "eslint": "^8.25.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "typedoc": "^0.23.23",
     "typescript": "^4.8.4"
   },
   "_moduleAliases": {
     "@shared": "../../../packages/shared/build",
     "@tktrex/shared": "../shared/build"
+  },
+  "typedoc": {
+    "entryPoint": "./bin/server.ts",
+    "readmeFile": "./README.md",
+    "displayName": "TK TrEx - Backend",
+    "tsconfig": "./tsconfig.json"
   }
 }
