--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -45,5 +45,11 @@
     "jest-fetch-mock": "^3.0.3",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0"
+  },
+  "typedoc": {
+    "entryPoint": "./src/app/index.ts",
+    "readmeFile": "./README.md",
+    "displayName": "TK TrEx - Extension",
+    "tsconfig": "./tsconfig.json"
   }
 }
