--- a/platforms/yttrex/extension/package.json
+++ b/platforms/yttrex/extension/package.json
@@ -69,5 +69,11 @@
     "tweetnacl": "^0.14.5",
     "tweetnacl-util": "^0.13.5",
     "uuid": "^9.0.0"
+  },
+  "typedoc": {
+    "entryPoint": "./src/app/index.ts",
+    "readmeFile": "./README.md",
+    "displayName": "YT TrEx - Extension",
+    "tsconfig": "./tsconfig.json"
   }
 }
