--- a/platforms/yttrex/shared/package.json
+++ b/platforms/yttrex/shared/package.json
@@ -42,5 +42,11 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "readmeFile": "./README.md",
+    "displayName": "YT TrEx - Shared",
+    "tsconfig": "./tsconfig.json"
   }
 }
