--- a/tsconfig.docs.json
+++ b/tsconfig.docs.json
@@ -7,6 +7,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react",
+    "module": "esnext",
+    "target": "es5",
     "rootDir": "./",
     "resolveJsonModule": true,
     "skipDefaultLibCheck": true,
