--- a/platforms/tktrex/automation/tsconfig.json
+++ b/platforms/tktrex/automation/tsconfig.json
@@ -34,7 +34,7 @@
   "references": [
     { "path": "../../../packages/shared" },
     { "path": "../shared" },
-    { "path": "../../../guardoni" }
+    { "path": "../../guardoni" }
   ],
   "ts-node": {
     "require": ["tsconfig-paths/register"],
