--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -53,22 +53,18 @@ jobs:
         run: yarn shared build
 
       - name: Build guardoni
-        run: |
-          yarn guardoni build
+        working-directory: ./platforms/guardoni
+        run: ./scripts/cli-build.sh
 
       - name: Test
         run: |
           yarn pm2 start --env test ./platforms/ecosystem.config.js
-          yarn yt:ext build:guardoni
-          yarn tk:ext build:guardoni
+          sleep 10
           yarn test guardoni --ci
 
-      - name: Package
-        run: yarn guardoni pkg
-
-      - name: Test cli
+      - name: Test YT cli
         working-directory: ./platforms/guardoni
-        run: ./scripts/cli-test.sh
+        run: ./scripts/cli-yt-test.sh
 
       - name: Stop pm2 ecosystem
         run: yarn pm2 stop all
