fix: dockerfile instructions

--- a/docker/guardoni/Dockerfile
+++ b/docker/guardoni/Dockerfile
@@ -1,9 +1,12 @@
 FROM node:16-alpine
+
 RUN mkdir /guardoni
 WORKDIR /guardoni
+ADD ./ ./
+
 RUN apk add python3
-ADD . .
-RUN npm install
-RUN yarn tk:ext install
-RUN yarn tk:ext clean
+
+RUN yarn install
 RUN yarn tk:ext build
+RUN yarn yt:ext build
+RUN yarn guardoni build
