fix: canvas dependencies

--- a/docker/guardoni/Dockerfile
+++ b/docker/guardoni/Dockerfile
@@ -1,10 +1,11 @@
-FROM node:16-alpine
+FROM node:16-slim
 
 RUN mkdir /guardoni
 WORKDIR /guardoni
-ADD ./ ./
+RUN apt-get update
+RUN apt-get install -y python3 build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev
 
-RUN apk add python3
+ADD ./ ./
 
 RUN yarn install
 RUN yarn tk:ext build
