--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -87,13 +87,13 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.182",
     "@types/nconf": "^0.10.2",
     "@types/pouchdb-find": "^6.3.7",
     "@types/pouchdb-node": "^6.1.4",
-    "@types/prettier": "^2.4.4",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/unzipper": "^0.10.5",
     "@types/webpack-node-externals": "^2.5.3",
     "@types/ws": "^8.5.3",
