--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,12 +33,12 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@types/chrome": "^0.0.179",
+    "@types/chrome": "^0.0.188",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
-    "@types/node": "^16.11.26",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^16.11.36",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
