--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -38,10 +38,10 @@
     "typescript": "^4.7.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.26",
-    "@types/prettier": "^2.4.4",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^16.11.36",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
