--- a/platforms/tktrex/extension/package.json
+++ b/platforms/tktrex/extension/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.182",
     "create-react-class": "^15.7.0",
     "debug": "^4.3.4",
     "fp-ts": "^2.11.9",
@@ -31,9 +31,9 @@
     "@types/create-react-class": "^15.6.3",
     "@types/debug": "^4.1.7",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^16.11.26",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^16.11.36",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.10.0",
