--- a/platforms/ycai/studio/package.json
+++ b/platforms/ycai/studio/package.json
@@ -29,13 +29,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/bs58": "^4.0.1",
-    "@types/chrome": "^0.0.179",
+    "@types/chrome": "^0.0.188",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/node": "^16.11.36",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-test-renderer": "^17.0.2",
     "@types/swagger-ui": "^3.52.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -73,7 +73,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@types/c3": "^0.7.8",
-    "@types/lodash": "^4.14.179",
+    "@types/lodash": "^4.14.182",
     "@vx/group": "0.0.199",
     "@vx/hierarchy": "0.0.199",
     "@vx/mock-data": "0.0.199",
