--- a/platforms/tktrex/shared/package.json
+++ b/platforms/tktrex/shared/package.json
@@ -5,6 +5,7 @@
     "clean": "rm -rf ./build",
     "lint": "eslint ./src",
     "build": "tsc -b",
+    "lint": "eslint ./src",
     "test": "jest --maxWorkers=8",
     "tdd": "jest --watch --maxWorkers=8",
     "dump-parsed-data": "ts-node bin/dump-parsed-data.ts",
