feat: added chrome stage

--- a/docker/guardoni/Dockerfile
+++ b/docker/guardoni/Dockerfile
@@ -11,3 +11,8 @@ RUN yarn install
 RUN yarn tk:ext build
 RUN yarn yt:ext build
 RUN yarn guardoni build
+RUN yarn guardoni pkg
+
+FROM selenium/standalone-chrome:102.0
+COPY --from=0 /guardoni/node_modules/guardoni/dist/guardoni-cli-2.5.4-linux guardoni-cli
+
