fix: ycai build with path to '@tktrex/shared' package

--- a/platforms/ycai/studio/tsconfig.json
+++ b/platforms/ycai/studio/tsconfig.json
@@ -29,7 +29,8 @@
     "paths": {
       "@shared/*": ["../../../../packages/shared/src/*"],
       "@taboule/*": ["../../../../packages/taboule/src/*"],
-      "@yttrex/shared/*": ["../../../yttrex/shared/src/*"]
+      "@yttrex/shared/*": ["../../../yttrex/shared/src/*"],
+      "@tktrex/shared/*": ["../../../tktrex/shared/src/*"]
     }
   },
   "references": [
