ci: run docs workflow for our set of branch names

--- a/.github/workflows/docs_pull_request.yml
+++ b/.github/workflows/docs_pull_request.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - daily
+      - docs/**
+      - fix/**
+      - refactor/**
     paths:
     - "docs/**"
     - "platforms/guardoni/docs/**"
