--- a/platforms/guardoni/package.json
+++ b/platforms/guardoni/package.json
@@ -20,13 +20,10 @@
     "postinstall": "electron-builder install-app-deps",
     "prepack": "yarn build",
     "check-stealth": "ts-node ./bin/check-stealth.ts",
-    "automate:dev": "ts-node ./src/tx-automate/index.ts",
-    "automate": "node dist/index.js",
     "tdd": "jest --watch --verbose"
   },
   "bin": {
-    "cli": "./bin/guardoni-cli.js",
-    "tk-cli": "./bin/guardoni-tk-cli.js"
+    "cli": "./bin/guardoni-cli.js"
   },
   "main": "./build/electron/main.js",
   "repository": {
@@ -70,8 +67,6 @@
     "lodash": "^4.17.21",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
-    "pouchdb-find": "^7.2.2",
-    "pouchdb-node": "^7.2.2",
     "puppeteer-core": "^13.7.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
@@ -89,8 +84,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/lodash": "^4.14.182",
     "@types/nconf": "^0.10.2",
-    "@types/pouchdb-find": "^6.3.7",
-    "@types/pouchdb-node": "^6.1.4",
     "@types/prettier": "^2.6.3",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
